--- a/turbulance/turbulance.cbp
+++ b/turbulance/turbulance.cbp
@@ -42,6 +42,9 @@
 			<Add library="gdi32" />
 			<Add directory="C:/Program Files (x86)/CodeBlocks/MinGW/lib" />
 		</Linker>
+		<Unit filename="include/Particle.h" />
+		<Unit filename="include/Plane.h" />
+		<Unit filename="include/algebra3.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
